--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         </div>
         <ul class="legend-container">
             <li class="legend">
-                <div class="legend-banner"></div>
+                <div class="legend-banner" data-legend="nread"></div>
                 <p class="legend-text">Not Read: <span id="legend-count" data-count="0">0</span></p>
             </li>
             <li class="legend">
-                <div class="legend-banner"></div>
+                <div class="legend-banner" data-legend="oread"></div>
                 <p class="legend-text">On Read: <span id="legend-count" data-count="0">0</span></p>
             </li>
             <li class="legend">
-                <div class="legend-banner"></div>
+                <div class="legend-banner" data-legend="read"></div>
                 <p class="legend-text">Read: <span id="legend-count" data-count="0">0</span></p>
             </li>
         </ul>
@@ -57,14 +57,15 @@
                 </svg>
             </div>
         </button>
+        <!--Book starts here-->
     </section>
 
     <dialog class="modal">
         <div class="modal-container">
             <div class="book-container">
                 <div class="card" style="--book-color: #fdfdfc">
-                    <div class="status-container" data-status="Not Read">
-                        <div class="status" id="status not-read" style="--_status-color: #dd2525"></div>
+                    <div class="status-container">
+                        <div class="status" id="status not-read" style="--_status-color: #34783a"></div>
                     </div>
                     <div class="book">
                         <div class="title-author-container">
